# camerata-ai

./: .gitignore  CAMERATA-QA.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: lint-principles.yml
principles/agentic/: orch-autocalls-ledger-1.toml  orch-budget-monitor-1.toml  orch-clear-winner-1.toml  orch-conflicting-robustness-1.toml  orch-conformance-1.toml  orch-context-override-1.toml  orch-env-gated-quality-1.toml  orch-model-tiering-1.toml  orch-new-path-tests-1.toml  orch-no-natural-break-1.toml  orch-novelty-1.toml  orch-one-way-door-1.toml  orch-output-digest-1.toml  orch-precision-recall-1.toml  orch-prereview-1.toml  orch-reviewer-split-1.toml  orch-tiered-escalation-1.toml  orch-training-cutoff-1.toml  orch-verify-runtime-1.toml
principles/api-layer/: arch-api-dtos-1.toml  arch-api-versioning-1.toml  arch-boundary-validation-1.toml  arch-cursor-pagination-1.toml  arch-exact-decimals-1.toml  arch-explicit-tx-1.toml  arch-hot-read-cache-1.toml  arch-idempotency-keys-1.toml  arch-middleware-first-1.toml  arch-repo-per-aggregate-1.toml  arch-repo-returns-domain-1.toml  arch-strict-layering-1.toml  arch-structured-errors-1.toml  arch-utc-timestamps-1.toml
principles/ci-cd/: arch-trigger-env-1.toml  arch-trunk-sync-1.toml  proc-auto-merge-1.toml  proc-feature-flags-1.toml
principles/concurrency/: proc-pr-concurrency-1.toml
principles/contributing/: camerata-anatomy-1.toml  camerata-enforcement-levels-1.toml
principles/howto/: camerata-user-guide-1.toml
src/: emit.rs  lib.rs  main.rs  principle.rs  profile.rs  registry.rs
(+90 files in other folders)
